--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,7 +19,7 @@
    
    "content_scripts": [ {
       "js": [ "jquery-1.6.4.min.js", "shortcut.js", "contentScript.js"],
-      "matches": [ "http://www.reddit.com/*", "https://www.reddit.com/*", "http://old.reddit.com/*", "https://old.reddit.com/*"],
+      "matches": [ "http://www.reddit.com/*", "https://www.reddit.com/*", "http://old.reddit.com/*", "https://old.reddit.com/*", "http://new.reddit.com/*", "https://new.reddit.com/*"],
       "run_at": "document_start"
    } ],
    
